[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Kami_path.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Path_Kami.gd" type="Script" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -40, 64, -1.12246, -95.9705, 1.12246, 95.9705, -40, 272, 0, 89.2357, 0, -89.2357, 192, 272, 0, 0, 0, 0, 192, 64 )
}

[node name="Path_Kami" type="Node2D"]
visible = false
position = Vector2( 24, -72 )
script = ExtResource( 2 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 40, -64 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -40, 64 )
rotation = 1.58
rotate = false
loop = false

[node name="Kami_path" parent="Path2D/PathFollow2D" instance=ExtResource( 1 )]
rotation = -1.5708

[node name="Tween" type="Tween" parent="Path2D/PathFollow2D/Kami_path"]

[node name="Path2D2" type="Path2D" parent="."]
position = Vector2( 40, -64 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D2"]
position = Vector2( -40, 64 )
rotation = 1.58
rotate = false
loop = false

[node name="Kami_path" parent="Path2D2/PathFollow2D" instance=ExtResource( 1 )]
rotation = -1.5708

[node name="Tween" type="Tween" parent="Path2D2/PathFollow2D/Kami_path"]

[node name="Path2D3" type="Path2D" parent="."]
position = Vector2( 40, -64 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D3"]
position = Vector2( -40, 64 )
rotation = 1.58
rotate = false
loop = false

[node name="Kami_path" parent="Path2D3/PathFollow2D" instance=ExtResource( 1 )]
rotation = -1.5708

[node name="Tween" type="Tween" parent="Path2D3/PathFollow2D/Kami_path"]

[node name="Path2D4" type="Path2D" parent="."]
position = Vector2( 40, -64 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D4"]
position = Vector2( -40, 64 )
rotation = 1.58
rotate = false
loop = false

[node name="Kami_path" parent="Path2D4/PathFollow2D" instance=ExtResource( 1 )]
rotation = -1.5708

[node name="Tween" type="Tween" parent="Path2D4/PathFollow2D/Kami_path"]

[node name="Path2D5" type="Path2D" parent="."]
position = Vector2( 40, -64 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D5"]
position = Vector2( -40, 64 )
rotation = 1.58
rotate = false
loop = false

[node name="Kami_path" parent="Path2D5/PathFollow2D" instance=ExtResource( 1 )]
rotation = -1.5708

[node name="Tween" type="Tween" parent="Path2D5/PathFollow2D/Kami_path"]

[node name="Path2D6" type="Path2D" parent="."]
position = Vector2( 40, -64 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D6"]
position = Vector2( -40, 64 )
rotation = 1.58
rotate = false
loop = false

[node name="Kami_path" parent="Path2D6/PathFollow2D" instance=ExtResource( 1 )]
rotation = -1.5708

[node name="Tween" type="Tween" parent="Path2D6/PathFollow2D/Kami_path"]

[connection signal="visibility_changed" from="." to="." method="_on_Path_Kami_visibility_changed"]
